// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ButtonToolbar Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > :first-child {
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.c5 > :last-child {
  border-top-left-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
  border-left: 0 !important;
}

.c5 > :not(:first-child):not(:last-child) {
  border-left: 0 !important;
}

.c5 * {
  box-shadow: none !important;
}

.c5 > :not(:first-child):not(:last-child) {
  border-radius: 0 !important;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.c0 * {
  box-shadow: none !important;
}

.c0 *:hover {
  box-shadow: none !important;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.875rem;
  padding: 0;
  border-radius: 0.4em;
  color: hsla(269,100%,95%,1);
  background-color: hsla(271,81%,56%,1);
  border: 1px solid transparent;
  box-shadow: rgba(0,0,0,0) 0px 0px 0px 0px,rgba(0,0,0,0) 0px 0px 0px 0px, hsla(269,97%,85%,1) 0px 10px 15px -3px, hsla(269,97%,85%,1) 0px 4px 6px -4px;
}

.c1:hover {
  background-color: hsla(272,72%,47%,1);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.875rem;
  padding: 0;
  border-radius: 0.4em;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  color: hsla(269,100%,95%,1);
  background-color: hsla(271,81%,56%,1);
  border: 1px solid transparent;
  box-shadow: rgba(0,0,0,0) 0px 0px 0px 0px,rgba(0,0,0,0) 0px 0px 0px 0px, hsla(269,97%,85%,1) 0px 10px 15px -3px, hsla(269,97%,85%,1) 0px 4px 6px -4px;
}

.c7:hover {
  background-color: hsla(272,72%,47%,1);
}

.c2 {
  padding: 0.4em;
}

.c6 {
  padding: 0.4em 0.6em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.2em;
  width: 1.2em;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 0.4em;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0.4em;
}

<body>
    <div>
      <div
        class="c0"
        role="button-toolbar"
      >
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c2"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
            </i>
          </span>
          <span
            class="c4"
          >
            Add
          </span>
        </button>
        <div
          class="c5"
          role="button-group"
        >
          <button
            class="c1"
            role="icon-button"
          >
            <span
              class="c6"
            >
              <i
                class="c3"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </i>
            </span>
          </button>
          <button
            class="c1"
            role="icon-button"
          >
            <span
              class="c6"
            >
              <i
                class="c3"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </i>
            </span>
          </button>
          <button
            class="c1"
            role="icon-button"
          >
            <span
              class="c6"
            >
              <i
                class="c3"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                  />
                </svg>
              </i>
            </span>
          </button>
          <button
            class="c1"
            role="icon-button"
          >
            <span
              class="c6"
            >
              <i
                class="c3"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                  />
                </svg>
              </i>
            </span>
          </button>
          <button
            class="c1"
            role="icon-button"
          >
            <span
              class="c6"
            >
              <i
                class="c3"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.73 3H8.27L3 8.27v7.46L8.27 21h7.46L21 15.73V8.27L15.73 3zM17 15.74 15.74 17 12 13.26 8.26 17 7 15.74 10.74 12 7 8.26 8.26 7 12 10.74 15.74 7 17 8.26 13.26 12 17 15.74z"
                  />
                </svg>
              </i>
            </span>
          </button>
          <button
            class="c1"
            role="icon-button"
          >
            <span
              class="c6"
            >
              <i
                class="c3"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                  />
                </svg>
              </i>
            </span>
          </button>
        </div>
        <button
          class="c7"
          role="icon-button"
        >
          <span
            class="c2"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </i>
          </span>
          <span
            class="c8"
          >
            Delete
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > :first-child {
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.c5 > :last-child {
  border-top-left-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
  border-left: 0 !important;
}

.c5 > :not(:first-child):not(:last-child) {
  border-left: 0 !important;
}

.c5 * {
  box-shadow: none !important;
}

.c5 > :not(:first-child):not(:last-child) {
  border-radius: 0 !important;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.c0 * {
  box-shadow: none !important;
}

.c0 *:hover {
  box-shadow: none !important;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.875rem;
  padding: 0;
  border-radius: 0.4em;
  color: hsla(269,100%,95%,1);
  background-color: hsla(271,81%,56%,1);
  border: 1px solid transparent;
  box-shadow: rgba(0,0,0,0) 0px 0px 0px 0px,rgba(0,0,0,0) 0px 0px 0px 0px, hsla(269,97%,85%,1) 0px 10px 15px -3px, hsla(269,97%,85%,1) 0px 4px 6px -4px;
}

.c1:hover {
  background-color: hsla(272,72%,47%,1);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.875rem;
  padding: 0;
  border-radius: 0.4em;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  color: hsla(269,100%,95%,1);
  background-color: hsla(271,81%,56%,1);
  border: 1px solid transparent;
  box-shadow: rgba(0,0,0,0) 0px 0px 0px 0px,rgba(0,0,0,0) 0px 0px 0px 0px, hsla(269,97%,85%,1) 0px 10px 15px -3px, hsla(269,97%,85%,1) 0px 4px 6px -4px;
}

.c7:hover {
  background-color: hsla(272,72%,47%,1);
}

.c2 {
  padding: 0.4em;
}

.c6 {
  padding: 0.4em 0.6em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.2em;
  width: 1.2em;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 0.4em;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0.4em;
}

<div>
    <div
      class="c0"
      role="button-toolbar"
    >
      <button
        class="c1"
        role="icon-button"
      >
        <span
          class="c2"
        >
          <i
            class="c3"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
              />
            </svg>
          </i>
        </span>
        <span
          class="c4"
        >
          Add
        </span>
      </button>
      <div
        class="c5"
        role="button-group"
      >
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                />
              </svg>
            </i>
          </span>
        </button>
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </i>
          </span>
        </button>
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
            </i>
          </span>
        </button>
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
            </i>
          </span>
        </button>
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.73 3H8.27L3 8.27v7.46L8.27 21h7.46L21 15.73V8.27L15.73 3zM17 15.74 15.74 17 12 13.26 8.26 17 7 15.74 10.74 12 7 8.26 8.26 7 12 10.74 15.74 7 17 8.26 13.26 12 17 15.74z"
                />
              </svg>
            </i>
          </span>
        </button>
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                />
              </svg>
            </i>
          </span>
        </button>
      </div>
      <button
        class="c7"
        role="icon-button"
      >
        <span
          class="c2"
        >
          <i
            class="c3"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </span>
        <span
          class="c8"
        >
          Delete
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Render ButtonToolbar Disabled ButtonToolbar 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > :first-child {
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.c5 > :last-child {
  border-top-left-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
  border-left: 0 !important;
}

.c5 > :not(:first-child):not(:last-child) {
  border-left: 0 !important;
}

.c5 * {
  box-shadow: none !important;
}

.c5 > :not(:first-child):not(:last-child) {
  border-radius: 0 !important;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 0.5rem;
  cursor: not-allowed !important;
  opacity: 0.6 !important;
}

.c0 * {
  box-shadow: none !important;
}

.c0 *:hover {
  box-shadow: none !important;
}

.c0 * {
  cursor: not-allowed !important;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.875rem;
  padding: 0;
  border-radius: 0.4em;
  color: hsla(271,81%,56%,1);
  background-color: hsla(270,100%,98%,1);
  border: 1px solid hsla(269,97%,85%,1);
}

.c1:hover {
  background-color: hsla(269,100%,92%,1);
}

.c2 {
  padding: 0.4em;
}

.c6 {
  padding: 0.4em 0.6em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.2em;
  width: 1.2em;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 0.4em;
}

<body>
    <div>
      <div
        class="c0"
        role="button-toolbar"
      >
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c2"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
            </i>
          </span>
          <span
            class="c4"
          >
            Add
          </span>
        </button>
        <div
          class="c5"
          role="button-group"
        >
          <button
            class="c1"
            role="icon-button"
          >
            <span
              class="c6"
            >
              <i
                class="c3"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </i>
            </span>
          </button>
          <button
            class="c1"
            role="icon-button"
          >
            <span
              class="c6"
            >
              <i
                class="c3"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </i>
            </span>
          </button>
          <button
            class="c1"
            role="icon-button"
          >
            <span
              class="c6"
            >
              <i
                class="c3"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                  />
                </svg>
              </i>
            </span>
          </button>
          <button
            class="c1"
            role="icon-button"
          >
            <span
              class="c6"
            >
              <i
                class="c3"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                  />
                </svg>
              </i>
            </span>
          </button>
          <button
            class="c1"
            role="icon-button"
          >
            <span
              class="c6"
            >
              <i
                class="c3"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.73 3H8.27L3 8.27v7.46L8.27 21h7.46L21 15.73V8.27L15.73 3zM17 15.74 15.74 17 12 13.26 8.26 17 7 15.74 10.74 12 7 8.26 8.26 7 12 10.74 15.74 7 17 8.26 13.26 12 17 15.74z"
                  />
                </svg>
              </i>
            </span>
          </button>
          <button
            class="c1"
            role="icon-button"
          >
            <span
              class="c6"
            >
              <i
                class="c3"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </i>
            </span>
          </button>
        </div>
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                />
              </svg>
            </i>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > :first-child {
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.c5 > :last-child {
  border-top-left-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
  border-left: 0 !important;
}

.c5 > :not(:first-child):not(:last-child) {
  border-left: 0 !important;
}

.c5 * {
  box-shadow: none !important;
}

.c5 > :not(:first-child):not(:last-child) {
  border-radius: 0 !important;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 0.5rem;
  cursor: not-allowed !important;
  opacity: 0.6 !important;
}

.c0 * {
  box-shadow: none !important;
}

.c0 *:hover {
  box-shadow: none !important;
}

.c0 * {
  cursor: not-allowed !important;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.875rem;
  padding: 0;
  border-radius: 0.4em;
  color: hsla(271,81%,56%,1);
  background-color: hsla(270,100%,98%,1);
  border: 1px solid hsla(269,97%,85%,1);
}

.c1:hover {
  background-color: hsla(269,100%,92%,1);
}

.c2 {
  padding: 0.4em;
}

.c6 {
  padding: 0.4em 0.6em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.2em;
  width: 1.2em;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 0.4em;
}

<div>
    <div
      class="c0"
      role="button-toolbar"
    >
      <button
        class="c1"
        role="icon-button"
      >
        <span
          class="c2"
        >
          <i
            class="c3"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
              />
            </svg>
          </i>
        </span>
        <span
          class="c4"
        >
          Add
        </span>
      </button>
      <div
        class="c5"
        role="button-group"
      >
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                />
              </svg>
            </i>
          </span>
        </button>
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </i>
          </span>
        </button>
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
            </i>
          </span>
        </button>
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
            </i>
          </span>
        </button>
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.73 3H8.27L3 8.27v7.46L8.27 21h7.46L21 15.73V8.27L15.73 3zM17 15.74 15.74 17 12 13.26 8.26 17 7 15.74 10.74 12 7 8.26 8.26 7 12 10.74 15.74 7 17 8.26 13.26 12 17 15.74z"
                />
              </svg>
            </i>
          </span>
        </button>
        <button
          class="c1"
          role="icon-button"
        >
          <span
            class="c6"
          >
            <i
              class="c3"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </i>
          </span>
        </button>
      </div>
      <button
        class="c1"
        role="icon-button"
      >
        <span
          class="c6"
        >
          <i
            class="c3"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
              />
            </svg>
          </i>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
